--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "element-ui": "^2.15.3",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
